# smartvision_system

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  config.json  cppcheck.sh  requirements.txt
smartvision_system/ai/: CMakeLists.txt  ai.cc  ai.h  postprocess.cc  yolov8.h
smartvision_system/core/: CMakeLists.txt  broadcaster.cc  broadcaster.h  command_server.cc  command_server.h  main.cc  main_rtsp_example.cpp  protocol.cc  protocol.h  smartvision old.h  smartvision.cc  smartvision.h  videorecorder.cc  videorecorder.h
smartvision_system/pantilt/: CMakeLists.txt  I2C.cc  I2C.h  PCA9685.cc  PCA9685.h  PID.cc  PID.h  pantilt.cc  pantilt.h  servo.cc  servo.h
smartvision_system/utils/: CMakeLists.txt  common.h  image_drawing.c  image_utils.c
